# demo-hatch

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
